--- a/text/survival.Rmd
+++ b/text/survival.Rmd
@@ -5,63 +5,70 @@ ethnicity, and tissue-specific disease progression. To explore these ideas, we
 used Bayesian inference to test models of survival using public longevity data
 from the CDC. The model estimates the effect of cancer type and cluster-specific
 cancer effects independently, resulting in a cancer and cluster-specific
-estimate of the aging rate multiplier, $k$.
+estimate of an effective age function and the aging rate multiplier, $k$.
 
 To illustrate the model, we simulate survival for four related groups (**Fig
-5A**). We start with a cohort of women aged 30 and show expected survival (light
-blue). By setting cancer rate multiplier to $k=2$ we simulate the effect of a
-moderately deadly cancer (yellow). Compare this to randomly selected women
-ranging from 30 to 70 years old (dark blue). Immediately, survival changes due
-to the mixture of ages, without malignancy. Adding a $k=2$ malignancy further
-reduces expected lifespan (red). Hence, due to the change in distribution of
-age-at-diagnosis, we expect equally deadly cancers to have *different* survival
-curves. The model takes this into account and cancer aggressiveness is estimated
-accurately without the confounding effect of age.
+5A**). We start with a cohort of women aged 30 randomly selected from the US
+population, and show expected survival (light blue). We then use typical values
+from the posterior samples to set the effective age of that cohort to the
+effective age of a BRCA patient (yellow). Finally to illustrate how the model
+varies by effective age we add an additional artificial 10 years to the BRCA
+effective age (dark blue). Compare these results to a randomly selected group of
+women ranging from 30 to 70 years old (green). Immediately, survival changes due
+to the mixture of ages, without malignancy. By computing the effective ages for
+this mixture of patients, we see that malignancy further reduces expected
+lifespan (pink). Adding an additional 10 years to effective age would reduce the
+lifespan even further (dark orange). Hence, simply due to the change in
+distribution of age-at-diagnosis, we expect two equally deadly cancers to have
+*different* survival curves. The model takes this into account and cancer
+aggressiveness is estimated accurately without the confounding effect of age
+through the effective age and aging rate parameters.
 
 We found that cancer types, as expected, have a range of prognoses relative to
-the general population. In **Fig 5B-E** we see three particularly deadly
-cancers (Stomach:STAD, Glioblastoma:GBM, and Pancreatic:PAAD), and one cancer
-where diagnosis decreases risk relative to background (Thyroid: THCA). Cancers
-with posterior probability for relative risk of less than 1 such as THCA should
-be interpreted carefully. This Bayesian model is for a state of information. The
-information that a person is diagnosed with cancer may lead us to expect shorter
-survival than the general population of matched age (k > 1), or longer survival
-than the general population of matched age (k < 1). Shorter prognosis could
-result from cancer aggressiveness, injuring the body and causing death. By
-contrast, longer prognosis could result from the cancer being relatively mild,
-and therefore diagnosis could be an informational signal that the patient is
-health conscious, with the comparison group having more people whose cancers go
-undiagnosed. It is important to note therefore that the diagnosis can increase
-our expectation of life relative to the comparison group, even if it decreases
-the expectation of life of the individual relative to the counterfactual where
-they did not have cancer.
+the general population. In **Fig 5B-D** we show how effective age baseline, and
+effective age rate (which modifies the baseline based on your actual age) as
+well as the ktis which accelerates or decelerates further aging, varies
+considerably from cancer to cancer. For example a 20 year old diagnosed with
+THCA or PRAD would be threated similarly to a 40 year old based on teh Effective
+Age parameter. It's noticeable that for every year beyond 20 in the PRAD
+diagnosis we add only an extra ~ 0.2 years (Effective Age Rate). The ktis
+parameter represents an acceleration (greater than 1) or deceleration (less) of
+the further aging beyond diagnosis. For example for BRCA patients each year past
+diagnosis adds about 1 year of risk, whereas for LGG patients it adds around 2,
+and for SARC patients it adds only 0.25 or so.
 
-The degree to which cancer accelerates aging can be determined by the $k_{tis}$
-multiplier (**Fig 5F**) multiplied by the cluster modifier $k_{cl}$ (**Fig
-6**). Looking at the tissue specific multiplier, the least deadly was prostate
-cancer (PRAD), and the most deadly was glioblastoma (GBM) which has a risk
-multiplier of between 15 and 22 relative to the background risk of death in the
-population. This undoubtedly is influenced by the fact that relatively young
-patients are affected by GBM and that it is extremely deadly. Among the
-deadliest cancers outside of GBM were stomach (STAD), melanoma (SKCM) and
-pancreatic (PAAD) cancers. Apart from these top 4 cancers which ranged from 6-22
-in relative risk of age-adjusted death, the remaining cancer types ranged from
-about 1 to 5 in magnitude.
 
-Our estimates of tissue-specific cluster effects, in contrast, ranged from less
-than 1 up to about 3 or 4, reflecting that some clusters are either less deadly
-or more deadly than other clusters within each cancer type (**Fig 6**). A
-cluster-specific rate of 1 represents the typical rate for this tissue type. For
-several cancers (_e.g._ PRAD, kidney chromophobe (KICH), diffuse large B-cell
-lymphoma (DBLC), thyroid cancer (THCA)) the posterior estimates are largely
-indistinguishable from the prior, reflecting that either there were too few
-mortalities in the data to make an estimate (as expected for PRAD and THCA) or
-too few samples, period. We did not observe cluster-specific trends that held
-true across cancer types, which could result from different cancers having
-different standards of care for example. In support of this interpretation, we
-also tested a factored model which considered both cancer type cluster
-independently. Though we were able to successfully fit this model, it is a
-special case of the more general model where cluster and tissue independently
-affect longevity, and there is no reason to believe that cluster specific
-effects would necessarily remain constant across tissue types given how widely
-the patients vary across tissue types, drug and surgical treatments.
+In **Fig 5E-H** we see three particularly deadly cancers (Glioblastoma:GBM,
+Pancreatic:PAAD, Ovarian:OV), and one cancer where diagnosis hardly changes risk
+relative to background (Thyroid: THCA). Cancers with posterior probability for
+relative risk of less than 1 should be interpreted carefully. This Bayesian
+model is for a state of information. The information that a person is diagnosed
+with cancer may lead us to expect shorter survival than the general population
+of matched age, or longer survival than the general population of matched
+age. Shorter prognosis could result from cancer aggressiveness, injuring the
+body and causing death. By contrast, longer prognosis could result from the
+cancer being relatively mild, and therefore diagnosis could be an informational
+signal that the patient is health conscious, with the comparison group having
+more people whose cancers and other health issues go undiagnosed. It is
+important to note therefore that the diagnosis can increase our expectation of
+life relative to the comparison group, even if it decreases the expectation of
+life of the individual relative to the counterfactual where they did not have
+cancer.
+
+Our estimates of tissue-specific cluster effects were for the Effective Age
+parameter. These cluster effects were multiplied by the tissue specific
+coefficient to form the full effective age. Priors for this parameter were
+relatively peaked around 1 reflecting the purpose of this coefficient as a
+multiplicative perturbation (**Fig 6**). A cluster-specific rate of 1 represents
+the typical rate for this tissue type. For several cancers (_e.g._  PRAD, kidney
+chromophobe (KICH), diffuse large B-cell lymphoma (DLBC), thyroid cancer (THCA))
+the posterior estimates are largely indistinguishable from the prior, reflecting
+that either there were too few mortalities in the data to make an estimate (as
+expected for PRAD and THCA) or too few samples, period. We did not observe
+cluster-specific trends that held true across cancer types, which could result
+from different cancers having different standards of care for example. For some
+cancers however, there is evidence that certain forms are more or less
+aggressive. PAAD class 8 seems to raise your effective age somewhat relative to
+other forms, as does LGG group 7, whereas BRCA group 5, COAD group 8, and LGG
+group 5 all seem somewhat lower risk than the other classes within those
+tissues.
