--- a/text/supplemental_methods.Rmd
+++ b/text/supplemental_methods.Rmd
@@ -191,7 +191,7 @@ And the density of deaths per unit time is the derivative with respect to T:
 $$p(T) = R(T) \exp(-\int_0^T R(t)dt)$$
 
 However, to model the risk of cancer effectively we found that it was necessary
-not to use the actual age $\A'$ but instead the "effective age" for that
+not to use the actual age $A'$ but instead the "effective age" for that
 tissue/class type. Our effective age is calculated as:
 
 $$A = A_{0} A_{cl} + A_r (A'-20)$$ Where $A_0$ is the tissue specific effective age
@@ -283,7 +283,7 @@ cat("\\newpage")
 
 #### Fig SM3
 
-```{r sm3, fig.height=3, fig.width=3}
+```{r sm3, fig.height=3, fig.width=6}
 sm3.1 <- ggplot(data.frame(x=0:110),aes(x)) + 
   stat_function(fun=function(x) dgamma(x,30.0,29.0/65),geom="area", fill = alpha("black", 0.5)) +
   theme_classic() + 
@@ -291,7 +291,7 @@ sm3.1 <- ggplot(data.frame(x=0:110),aes(x)) +
   theme(plot.title = element_text(size = 12, hjust = 0.5),
         panel.grid.major = element_line(size = 0.75),
         panel.grid.minor = element_line()) +
-  labs(x= expression(paste("Prior for Effage"["tis"])), y = "Probability Density")
+  labs(x= expression(paste("Prior for A"["0"])), y = "Probability Density")
 
 sm3.2 <- ggplot(data.frame(x=0:3),aes(x)) + 
   stat_function(fun=function(x) dgamma(x,50.0,49.0/1.0),geom="area", fill = alpha("black", 0.5)) +
@@ -300,7 +300,7 @@ sm3.2 <- ggplot(data.frame(x=0:3),aes(x)) +
   theme(plot.title = element_text(size = 12, hjust = 0.5),
         panel.grid.major = element_line(size = 0.75),
         panel.grid.minor = element_line()) +
-  labs(x= expression(paste("Prior for Effage"["cl"])), y = "Probability Density")
+  labs(x= expression(paste("Prior for A"["cl"])), y = "Probability Density")
 
 layout = "
 AABB
